assets/_layout//maps: add padding to stop zoom button overlapping filters fixes  #1552

--- a/adhocracy-plus/assets/scss/_layout.scss
+++ b/adhocracy-plus/assets/scss/_layout.scss
@@ -56,7 +56,7 @@
 .l-top-overlap {
     position: relative;
     z-index: 1;
-    bottom: -2.75 * $spacer;
+    bottom: -2 * $spacer;
 }
 
 .l-bottom-overlap {
